<resources>
    <string name="app_name">Changunarayan Tourist Guide</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">GOT IT</string>

    <string name="slide_1_title">Travelling!</string>
    <string name="travel_with_better_technology">Travel with better Technology.</string>

    <string name="slide_2_title">Scan QR Code!</string>
    <string name="slide_2_desc">Scan QR Code for easy access to information.</string>

    <string name="slide_3_title">360/VR Images!</string>
    <string name="slide_3_desc">Explore more with 360 degree images of all seasons and time.</string>

    <string name="slide_4_title">Better with Audio!</string>
    <string name="slide_4_desc">Audio description of places for better understanding.</string>

    <string name="slide_5_title">View on MAP!</string>
    <string name="slide_5_desc">Navigate around  places with an interactive map.</string>

    <string name="storage_rationale">Changunarayan Tourist App need storage permission to download and save data so they can be shared directly.</string>
    <string name="camera_rationale">Changunarayan Tourist App need camera permission to san QRCode.</string>
    <string name="english">English</string>
    <string name="nepali">Nepali (नेपाली)</string>
    <string name="chinese">Chinese (中文)</string>
    <string name="scan_barcode">Scan the QR code</string>
    <string name="no_barcode_captured">Enter the QR code</string>
    <string name="image_description">Image Description</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="religious_visit">Religious Visit</string>
    <string name="sight_seeing">Sight Seeing</string>
    <string name="verification">Verify</string>
    <string name="request_for_access">Request For Access</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="check_internet_retry_again">Check your Internet Connection and try again.</string>


    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Unexpected Error Occured.</string>
    <string name="dialog_error_title_sync_failed">Data Sync Failed (Code: %1$s)</string>
    <string name="dialog_action_hide">Hide</string>
    <string name="dialog_action_retry">Retry</string>
    <string name="select_base_layer">Select Base Layer</string>
    <string name="select_overlay_layer">Select Overlay Layer</string>
    <string name="select_place_layer">Select Place</string>
    <string name="title">Title</string>
    <string name="icon_explanation">Map Legend</string>
    <string name="go_there">Get Route</string>

    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="view_all">View All</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="place_name">Place Name</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="map">Map</string>

    <string name="fetching_file">Getting %1$s.\n\Geojson data %2$s of %3$s file(s)</string>
    <string name="changunarayan_boundary">Changunarayan </string>
    <string name="nagarkot_boundary">Nagarkot </string>
    <string name="select_language">Select Language</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="view_details">View Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="reverse">Reverse</string>
    <string name="stop">Stop</string>
    <string name="fast">Fast</string>
    <string name="audio_title">Audio title</string>
    <string name="see_the_majestic_himalayas_including_mt_everest_if_the_skies_are_clear_you_can_view_the_himalayan_mountains">Welcome to the ancient city of Changunarayan and get lost in the beauty of Nagarkot. This app is your virtual tour guide with verified information on each heritage item and surrounding locations.</string>
    <string name="nepal">Nepal</string>
    <string name="place_list">Data View</string>
    <string name="near_by_places_list">Nearby Places List</string>
    <string name="submit_qrcode">Submit QR Code</string>
    <string name="home">Home</string>
    <string name="qrcode_scanner">QRCode Scanner</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Samir Dangal</string>
    <string name="nav_header_subtitle">samirdangal@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="changunarayan">Changunarayan Heritage Site</string>
    <string name="currently_there_is_no_data_available">Currently, there is no data available.</string>
    <string name="explore_changunarayan_area">Explore %s Area</string>
    <string name="tourist_information_guide">Rules And Regulations</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_changunarayan">Welcome to Changunarayan Municipality</string>
    <string name="your_virtual_guide">Virtual Tourist Guide App.</string>


    <string name="get_location">Record Location</string>
    <string name="getting_location">Loading Location</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="save_point">Accept GeoPoint</string>
    <string name="get_point">Start GeoPoint</string>
    <string name="geopoint_view_read_only">View GeoPoint</string>
    <string name="cancel_location">Cancel</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %f$s m</string>
    <string name="location_metadata">Satellites available: %1$d/24\n\nTime elapsed: %2$s</string>
    <string name="submit_rating">submit rating</string>
    <string name="rate_place">Rate Place</string>
    <string name="thank_you_for_rating_us">Thank you for rating us.</string>
    <string name="unable_to_rate">Unable to rate this place.</string>
    <string name="please_wait">Please wait!!!</string>
    <string name="scan">Scan</string>
    <string name="explore">Explore</string>
    <string name="register">Register</string>
    <string name="place_details">Place Details</string>
    <string name="home_page">Home Page</string>

    <string name="designed_and_developed_by_naxa_pvt_ltd">Designed and developed by Naxa Pvt. Ltd.</string>
    <string name="all_rights_reserved_2019">All rights reserved ©2019.</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="country">Country</string>
    <string name="your_country">Your Country</string>
    <string name="select_gender">Select Gender</string>
    <string name="purpose_for_visit">Purpose For Visit</string>
    <string name="easy_way_to_get_details_with_little_effort">Explore sites, attractions, landmarks, eateries and more.</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="or">OR</string>
    <string name="language_not_found">Language not found</string>
    <string name="logout">Logout</string>
    <string name="respected_mayor_lbl">Mayor</string>
    <string name="mayor_name">Som Prasad Mishra</string>
    <string name="mayors_video_desc">Welcome to Changunarayan Municipality\'s first tourist guide mobile App.</string>
    <string name="mayor_s_message">Mayor\'s Message</string>
    <string name="developed_by_naxa_pvt_ltd">Developed By: Naxa Pvt. Ltd.</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="searching_current_location">Searching current location  Make sure your GPS provider is enabled.</string>
    <string name="please_enable_gps_provider">Please enable your GPS Provider</string>
    <string name="map_is_not_ready_yet">Your map is not ready yet</string>
    <string name="searching_your_current_location">Searching Your Current Location</string>
    <string name="changunarayan_virtual_app_guide">Changunarayan Virtual Guide App.</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="street_view">Street View</string>
    <string name="satellite_view">Satellite View</string>


</resources>
