<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_qrcode_scanner"
            android:title="@string/qrcode_scanner" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_places_list"
            android:title="@string/place_list" />

        <item
            android:id="@+id/nav_refresh_data"
            android:title="@string/refresh_data" />

        <item
            android:id="@+id/nav_tourist_info_guide"
            android:title="@string/tourist_information_guide" />
        <item
            android:id="@+id/nav_mayors_message"
            android:title="@string/mayor_s_message" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us"
            />


    </group>


<!--    <group android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_designd_and_developed"-->
<!--            android:title="@string/developed_by_naxa_pvt_ltd"-->
<!--            />-->
<!--    </group>-->


</menu>
