<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bottom_images"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_menu_image_24dp"
        android:title="@string/images"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bottom_videos"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_menu_video_24dp"
        android:title="@string/videos"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_bottom_audios"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_menu_audio_24dp"
        android:title="@string/audios"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bottom_map"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_menu_map_24dp"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
</menu>