<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectlanguage.SelectlanguageActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_layout">
    </include>

    <LinearLayout
        android:layout_below="@id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_default_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            style="@style/LanguageSelectorTextStyle"/>

        <TextView
            android:id="@+id/tv_select_nepali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nepali"
            style="@style/LanguageSelectorTextStyle"/>

        <TextView
            android:id="@+id/tv_select_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            style="@style/LanguageSelectorTextStyle"/>

    </LinearLayout>
</RelativeLayout>