<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_margin"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:scaleType="center"
        android:id="@+id/nav_user_profile_image_view"
        style="@style/HeaderImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/nav_header_title"
        style="@style/Text.Title.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white_80"
        android:gravity="center"/>

    <TextView
        android:id="@+id/nav_header_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_with_better_technology"
        android:textColor="@color/white_80"
        android:gravity="center"/>

</LinearLayout>
