<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="false"
    android:id="@+id/dragView"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/iv_sliding_layout_indicator"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_keyboard_arrow_up_white_24dp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_marker_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Detailed Information \n Information"
            android:maxLines="2"
            style="@style/headlineText"
            />


        <TextView
            android:id="@+id/tv_marker_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loremipsum"
            style="@style/bodyText"
            android:maxLines="3"
            />

            <ImageView
                android:id="@+id/iv_marker_primary_image"
                app:srcCompat="@drawable/ic_bottom_menu_map_24dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginRight="@dimen/activity_default_margin"
                android:layout_marginLeft="@dimen/activity_default_margin"
                />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_default_margin">

            <Button
                android:id="@+id/btnGoThere"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/go_there"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:background="@drawable/button_rounded_bg"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/spacing_medium"/>

            <Button
                android:id="@+id/btn_view_marker_details"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/view_details"
                android:layout_gravity="center_vertical"
                android:textAllCaps="false"
                android:background="@drawable/button_rounded_bg"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/spacing_medium"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>

