<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".placedetailsview.PlaceDetailsActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_layout"/>

    <FrameLayout
        android:layout_below="@id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!---->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?android:attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/iv_place_details_main"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/details_page_img_height"
                    android:background="@color/slate_black"
                    app:srcCompat="@drawable/ic_bottom_menu_image_24dp"
                    />

                <ImageButton
                    android:id="@+id/btn_view_vr_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_vr_image"
                    android:background="@drawable/ripple_effect_circular_button"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="222dp"
                    android:layout_marginEnd="@dimen/activity_default_margin"
                    android:visibility="gone"
                    />

                <LinearLayout
                    android:layout_below="@id/iv_place_details_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_default_margin">

                    <TextView
                        android:id="@+id/tv_place_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/slate_black"
                        android:text="@string/place_name"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:textSize="@dimen/material_text_title"
                        android:textStyle="bold"/>

                    <RatingBar
                        android:id="@+id/rating_bar_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/placeRatingBar"
                        android:rating="3.5"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:layout_marginBottom="@dimen/activity_default_margin"
                        android:focusable="true"
                      />

                    <TextView
                        android:id="@+id/tv_place_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/material_text_body1"
                        android:text="@string/loremipsum"/>


                    <LinearLayout
                        android:id="@+id/ll_nearby_places_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nearby_place_LBL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/slate_black"
                        android:text="@string/nearby_places"
                        android:layout_marginTop="@dimen/activity_default_margin"
                        android:textSize="@dimen/material_text_title"
                        android:textStyle="bold"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_nearby_places"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        </androidx.recyclerview.widget.RecyclerView>
                    <Button
                        android:id="@+id/btn_view_all_nearby_places"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/view_all"
                        />
                    </LinearLayout>


                </LinearLayout>



            </RelativeLayout>
        </ScrollView>


        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/slate_black"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_navigation_menu" />

    </FrameLayout>

</RelativeLayout>